<resources>
    <string name="app_name">Assignment3</string>

    <string name="home">Home</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="fixed_deposit">Fixed Deposit</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="error_name">Fill Valid Name</string>
    <string name="error_phone">Fill Valid Phone Number</string>
    <string name="error_email">Fill Valid Email</string>
    <string name="error_account">Fill Valid Account Number</string>
    <string name="error_ifsc">Fill Valid IFSC Number</string>
    <string name="error_crn">Fill Valid CRN Number</string>
    <string name="error_pincode">Pincode should be 6 digits long</string>
    <string name="error_confirm_pincode">Pincode not matching with confirm pincode</string>
    <string name="error_invalid_credentials">Invalid Credentials</string>
    <string name="error_no_user_exists">No Such User Exists</string>
    <string name="error_insufficient_balance">Insufficient Balance</string>
    <string name="error_fill_duration">Select Duration</string>
    <string name="error_transfer_name">Fill Transfer Name</string>
    <string name="error_transfer_account">Fill Transfer Account Number</string>
    <string name="error_transfer_ifsc">Fill Transfer IFSC Code</string>
    <string name="error_transfer_amount">Fill Transfer Amount</string>
    <string name="error_fd_amount">Fill FD Amount</string>
    <string name="error_acc_duplicate">Account Number is Yours</string>

    <string name="success_fd">FD Created Successfully</string>
    <string name="success_transfer">Amount Transferred Successfully</string>

    <string name="type">Type:</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="email">Email</string>
    <string name="confirm_pincode">Confirm Pincode</string>
    <string name="pincode">Pincode</string>
    <string name="acc_number">Account Number</string>
    <string name="login">Login</string>
    <string name="rate">Rate:</string>
    <string name="register">Register</string>
    <string name="create_user">create user</string>
    <string name="create_fd">Create FD</string>
    <string name="to_account_no">To Account No.</string>
    <string name="to_name">To Name</string>
    <string name="to_ifsc_code">To IFSC Code</string>
    <string name="amount">Amount</string>
    <string name="transfer">Transfer</string>
    <string name="crn_number">CRN Number</string>

    <string-array name="account_type">
        <item>Current</item>
        <item>Savings</item>
    </string-array>

    <string-array name="fd_duration">
        <item>1 Month</item>
        <item>3 Month</item>
        <item>6 Month</item>
        <item>1 Year</item>
        <item>3 Year</item>
        <item>5 Year</item>
        <item>10 Year</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_content">FILE_CONTENT</string>
    <string name="error_worker">error in worker</string>
    <string name="file_name">FILE_NAME</string>
    <string name="download_message_transaction">Download Receipt of the Transaction</string>
    <string name="download_receipt">Download Receipt</string>
    <string name="login_success">Login Successful</string>
    <string name="error_ifsc_mismatch">IFSC No. does not match</string>
    <string name="download_message_fd">Download Receipt of the FD</string>
    <string name="error_account_exists">Account Already Exists</string>

</resources>